--- a/static/datasets/.gitignore
+++ b/static/datasets/.gitignore
@@ -1,5 +1,6 @@
 # Not commit everything in this directory
 *
-!/results/
+!/oxbuild/results/
+!/paris/results/
 # Except .gitignore file
 !.gitignore
