--- a/static/datasets/.gitignore
+++ b/static/datasets/.gitignore
@@ -1,7 +1,8 @@
 # Not commit everything in this directory
 # !paris/results/
 # Except .gitignore file
-*
-!oxbuild/results/
-!paris/results/
+oxbuild/*
+!oxbuild/results
+paris/*
+!paris/results
 !.gitignore
